Fixed syntax for html className tags and uneven card display

--- a/frontend/src/shared-components/styles.css
+++ b/frontend/src/shared-components/styles.css
@@ -66,6 +66,7 @@ body{
 
 .card{
   background-color: #FFFFFF;
+  width: 100%;
 }
 
 .related-instances > div > div{
